[project]
name = ""
version = ""
description = ""
authors = [
    {name = "James Mark", email = "james.david.mark@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = [
    "pylint",
    "pyinstaller",
]
lint = [
    "black>=23.11.0",
]
